--- a/pages/herostyles/hero1/index.html
+++ b/pages/herostyles/hero1/index.html
@@ -6,6 +6,7 @@
     <title>Kimetsu no Yaiba</title>
     <link rel="stylesheet" href="../hero1/assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body class="hero1-body">
     <header class="header-hero1">
