--- a/pages/staticstyles/index.html
+++ b/pages/staticstyles/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Static Card Gallery</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../staticstyles/assets/css/css/styles.css">
+    <!-- Link fonts for each card type -->
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Metal&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kite+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -12,12 +18,55 @@
         <button onclick="location.href='../../index.html'">Back to Home</button>
     </header>
     <main>
-        <section>
-            <div class="card">Card 1</div>
-            <div class="card">Card 2</div>
-            <div class="card">Card 3</div>
-            <div class="card">Card 4</div>
-            <div class="card">Card 5</div>
+        <section class="card-section">
+            <div class="hero-card">
+                <h2>Demon Slayer</h2>
+                <h3>Hashira Training Arc</h3>
+                <p>Tanjiro and his comrades undergo training under the Pillars of the Demon Slayer Corps. With Nezuko kept somewhere safe, will Tanjiro be able to hone his skills in preparation against the Demon King Muzan?</p>
+            </div>
+        </section>
+
+        <section class="card-section">
+            <div class="bludshot-card">
+                <img src="../staticstyles/assets/css/img/bludshot-logo.png" alt="Bludshot Logo" class="bludshot-logo">
+                <p class="bludshot-description">Nu-metal done heavy, done right.</p>
+            </div>
+        </section>
+
+        <section class="card-section">
+            <div class="nova-card">
+                <div class="card-title">Nova+</div>
+                <div class="card-subtitle">The Casanova Guild</div>
+                <div class="card-description">The guild of stars, castles of memories and glory</div>
+            </div>
+        </section>
+
+        <section class="card-section">
+            <div class="wf-card">
+                <img src="../staticstyles/assets/css/img/wftitle.png" alt="WayFinder Title" class="card-title-img">
+                <div class="card-description">
+                    Commuting has never been made this easy! With WayFinder you can now plan your next ride, track your balance, and be alarmed of traffic conditions!
+                </div>
+            </div>
+        </section>
+
+        <section class="card-section">
+            <div class="main-card" id="main-card">
+                <h1>Leiyam</h1>
+                <img src="../staticstyles/assets/css/img/leiyampfp.png" alt="Profile Picture" class="profile-pic">
+                <div class="card-content">
+                    <p>Hey there! Check out my other social media!</p>
+                    <nav>
+                        <ul>
+                            <li><a href="../hero1/index.html">Hero 1</a></li>
+                            <li><a href="../hero2/index.html">Hero 2</a></li>
+                            <li><a href="../hero3/index.html">Hero 3</a></li>
+                            <li><a href="../hero4/index.html">Hero 4</a></li>
+                            <li><a href="../herostyles/index.html">Hero Gallery</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </section>
     </main>
 </body>
