--- a/pages/herostyles/hero5/index.html
+++ b/pages/herostyles/hero5/index.html
@@ -25,28 +25,28 @@
         </div>
     </div>
     <div class="social-media-card discord-card">
-        <img src="assets/img/DiscordLogo.png" alt="Discord Logo" class="social-media-logo">
+        <img src="assets/img/discordlogo.png" alt="Discord Logo" class="social-media-logo">
         <div class="social-media-content">
             <p>Leiyam#leiyam</p>
             <p>Add me on Discord!</p>
         </div>
     </div>
     <div class="social-media-card youtube-card">
-        <img src="assets/img/YTLogo.png" alt="YouTube Logo" class="social-media-logo">
+        <img src="assets/img/ytlogo.png" alt="YouTube Logo" class="social-media-logo">
         <div class="social-media-content">
             <p>Leiyam</p>
             <p>Consider leaving a sub! :)</p>
         </div>
     </div>
     <div class="social-media-card twitch-card">
-        <img src="assets/img/TwitchLogo.png" alt="Twitch Logo" class="social-media-logo">
+        <img src="assets/img/twitchlogo.png" alt="Twitch Logo" class="social-media-logo">
         <div class="social-media-content">
             <p>LeiyamLive</p>
             <p>See me play games live!</p>
         </div>
     </div>
     <div class="social-media-card twitter-card">
-        <img src="assets/img/TwitterLogo.png" alt="Twitter Logo" class="social-media-logo">
+        <img src="assets/img/twitterlogo.png" alt="Twitter Logo" class="social-media-logo">
         <div class="social-media-content">
             <p>@Leiyamm_</p>
             <p>Peep my feed!</p>
